--- a/samplerinfinite.ui
+++ b/samplerinfinite.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>679</width>
-    <height>361</height>
+    <width>1903</width>
+    <height>983</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,10 +23,10 @@
    <widget class="QWidget" name="widget_2" native="true">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>20</y>
-      <width>381</width>
-      <height>201</height>
+      <x>240</x>
+      <y>70</y>
+      <width>411</width>
+      <height>231</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -37,8 +37,8 @@
       <rect>
        <x>-51</x>
        <y>-10</y>
-       <width>571</width>
-       <height>371</height>
+       <width>461</width>
+       <height>241</height>
       </rect>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
@@ -54,13 +54,46 @@ set-color: rgb(0, 0, 0)</string>
      </layout>
     </widget>
    </widget>
+   <widget class="QWidget" name="widget_3" native="true">
+    <property name="geometry">
+     <rect>
+      <x>149</x>
+      <y>350</y>
+      <width>1271</width>
+      <height>451</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border: 2px solid green</string>
+    </property>
+    <widget class="QWidget" name="verticalLayoutWidget_2">
+     <property name="geometry">
+      <rect>
+       <x>9</x>
+       <y>10</y>
+       <width>1251</width>
+       <height>431</height>
+      </rect>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_2">
+      <item>
+       <widget class="QTextEdit" name="fileBrowser">
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(0, 0, 0);
+</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>679</width>
+     <width>1903</width>
      <height>17</height>
     </rect>
    </property>
