--- a/samplerinfinite.ui
+++ b/samplerinfinite.ui
@@ -59,7 +59,7 @@ set-color: rgb(0, 0, 0)</string>
      <rect>
       <x>149</x>
       <y>350</y>
-      <width>1271</width>
+      <width>581</width>
       <height>451</height>
      </rect>
     </property>
@@ -71,7 +71,7 @@ set-color: rgb(0, 0, 0)</string>
       <rect>
        <x>9</x>
        <y>10</y>
-       <width>1251</width>
+       <width>561</width>
        <height>431</height>
       </rect>
      </property>
@@ -81,6 +81,35 @@ set-color: rgb(0, 0, 0)</string>
         <property name="styleSheet">
          <string notr="true">background-color: rgb(0, 0, 0);
 </string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="widget_4" native="true">
+    <property name="geometry">
+     <rect>
+      <x>780</x>
+      <y>70</y>
+      <width>531</width>
+      <height>301</height>
+     </rect>
+    </property>
+    <widget class="QWidget" name="verticalLayoutWidget_3">
+     <property name="geometry">
+      <rect>
+       <x>9</x>
+       <y>0</y>
+       <width>521</width>
+       <height>301</height>
+      </rect>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_3">
+      <item>
+       <widget class="SearchableComboBox" name="searchablecombobox" native="true">
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(0, 170, 0)</string>
         </property>
        </widget>
       </item>
@@ -105,6 +134,12 @@ set-color: rgb(0, 0, 0)</string>
    <class>AudioDropWidget</class>
    <extends>QWidget</extends>
    <header location="global">audiodropwidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>SearchableComboBox</class>
+   <extends>QWidget</extends>
+   <header location="global">searchablecombobox.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
