*COMPLETED* - can click frequencies and have them be displayed
*TO-DO*
- make a 'start' button that will send information from gui to the
processor

--- a/samplerinfinite.ui
+++ b/samplerinfinite.ui
@@ -116,6 +116,38 @@ set-color: rgb(0, 0, 0)</string>
      </layout>
     </widget>
    </widget>
+   <widget class="QWidget" name="widget_5" native="true">
+    <property name="geometry">
+     <rect>
+      <x>799</x>
+      <y>399</y>
+      <width>211</width>
+      <height>401</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border: 2px solid green</string>
+    </property>
+    <widget class="QWidget" name="verticalLayoutWidget_4">
+     <property name="geometry">
+      <rect>
+       <x>9</x>
+       <y>10</y>
+       <width>191</width>
+       <height>381</height>
+      </rect>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_4">
+      <item>
+       <widget class="QTextEdit" name="freqDisplay">
+        <property name="styleSheet">
+         <string notr="true">set-color: rgb(0, 170, 0)</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
