--- a/samplerinfinite.ui
+++ b/samplerinfinite.ui
@@ -92,7 +92,7 @@ set-color: rgb(0, 0, 0)</string>
      <rect>
       <x>780</x>
       <y>70</y>
-      <width>531</width>
+      <width>241</width>
       <height>301</height>
      </rect>
     </property>
@@ -101,7 +101,7 @@ set-color: rgb(0, 0, 0)</string>
       <rect>
        <x>9</x>
        <y>0</y>
-       <width>521</width>
+       <width>231</width>
        <height>301</height>
       </rect>
      </property>
@@ -142,6 +142,38 @@ set-color: rgb(0, 0, 0)</string>
        <widget class="QTextEdit" name="freqDisplay">
         <property name="styleSheet">
          <string notr="true">set-color: rgb(0, 170, 0)</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="widget_6" native="true">
+    <property name="geometry">
+     <rect>
+      <x>1170</x>
+      <y>350</y>
+      <width>111</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <widget class="QWidget" name="verticalLayoutWidget_5">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>111</width>
+       <height>71</height>
+      </rect>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_5">
+      <item>
+       <widget class="QPushButton" name="startButton">
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(0, 170, 0)</string>
+        </property>
+        <property name="text">
+         <string>Start</string>
         </property>
        </widget>
       </item>
