--- a/samplerinfinite.ui
+++ b/samplerinfinite.ui
@@ -151,19 +151,19 @@ set-color: rgb(0, 0, 0)</string>
    <widget class="QWidget" name="widget_6" native="true">
     <property name="geometry">
      <rect>
-      <x>1230</x>
-      <y>340</y>
+      <x>1250</x>
+      <y>590</y>
       <width>111</width>
-      <height>71</height>
+      <height>41</height>
      </rect>
     </property>
     <widget class="QWidget" name="verticalLayoutWidget_5">
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>0</y>
+       <y>10</y>
        <width>111</width>
-       <height>71</height>
+       <height>31</height>
       </rect>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_5">
@@ -190,7 +190,7 @@ color: rgb(0, 0, 0)</string>
     <property name="geometry">
      <rect>
       <x>1190</x>
-      <y>550</y>
+      <y>450</y>
       <width>261</width>
       <height>20</height>
      </rect>
@@ -237,7 +237,7 @@ color: rgb(0, 0, 0)</string>
     <property name="geometry">
      <rect>
       <x>1250</x>
-      <y>500</y>
+      <y>400</y>
       <width>120</width>
       <height>41</height>
      </rect>
@@ -266,6 +266,77 @@ color: rgb(0, 255, 0)</string>
         </property>
         <property name="text">
          <string>Freq Strength</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignmentFlag::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="widget_7" native="true">
+    <property name="geometry">
+     <rect>
+      <x>1240</x>
+      <y>290</y>
+      <width>120</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <widget class="QWidget" name="verticalLayoutWidget_8">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>101</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_8">
+      <item>
+       <widget class="QPushButton" name="OutputDirectoryButton">
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(0, 255, 0);
+color: rgb(0, 0, 0)</string>
+        </property>
+        <property name="text">
+         <string>Output Directory</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="widget_8" native="true">
+    <property name="geometry">
+     <rect>
+      <x>1250</x>
+      <y>340</y>
+      <width>120</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <widget class="QWidget" name="verticalLayoutWidget_9">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>10</y>
+       <width>111</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_9">
+      <item>
+       <widget class="QLabel" name="OutputDirectoryLabel">
+        <property name="styleSheet">
+         <string notr="true">color: rgb(0, 255, 0)</string>
+        </property>
+        <property name="frameShape">
+         <enum>QFrame::Shape::Box</enum>
+        </property>
+        <property name="text">
+         <string/>
         </property>
         <property name="alignment">
          <set>Qt::AlignmentFlag::AlignCenter</set>
