--- a/samplerinfinite.ui
+++ b/samplerinfinite.ui
@@ -174,6 +174,9 @@ set-color: rgb(0, 0, 0)</string>
           <family>Viner Hand ITC</family>
          </font>
         </property>
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
         <property name="styleSheet">
          <string notr="true">background-color: rgb(0, 170, 0);
 color: rgb(0, 0, 0)</string>
@@ -215,8 +218,11 @@ color: rgb(0, 0, 0)</string>
        <height>11</height>
       </rect>
      </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
+     </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(0, 255, 0)
+      <string notr="true">background-color: rgb(0, 170, 0)
 </string>
      </property>
      <property name="maximum">
@@ -262,7 +268,7 @@ color: rgb(0, 0, 0)</string>
         </property>
         <property name="styleSheet">
          <string notr="true">background-color: rgb(0, 0, 0);
-color: rgb(0, 255, 0)</string>
+color: rgb(0, 170, 0)</string>
         </property>
         <property name="text">
          <string>Freq Strength</string>
@@ -289,15 +295,18 @@ color: rgb(0, 255, 0)</string>
       <rect>
        <x>10</x>
        <y>10</y>
-       <width>101</width>
+       <width>104</width>
        <height>31</height>
       </rect>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_8">
       <item>
        <widget class="QPushButton" name="OutputDirectoryButton">
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
         <property name="styleSheet">
-         <string notr="true">background-color: rgb(0, 255, 0);
+         <string notr="true">background-color: rgb(0, 170, 0);
 color: rgb(0, 0, 0)</string>
         </property>
         <property name="text">
@@ -330,7 +339,7 @@ color: rgb(0, 0, 0)</string>
       <item>
        <widget class="QLabel" name="OutputDirectoryLabel">
         <property name="styleSheet">
-         <string notr="true">color: rgb(0, 255, 0)</string>
+         <string notr="true">color: rgb(0, 170, 0)</string>
         </property>
         <property name="frameShape">
          <enum>QFrame::Shape::Box</enum>
@@ -340,6 +349,50 @@ color: rgb(0, 0, 0)</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignmentFlag::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="AppendModeBase" native="true">
+    <property name="geometry">
+     <rect>
+      <x>1540</x>
+      <y>300</y>
+      <width>120</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <widget class="QWidget" name="verticalLayoutWidget_10">
+     <property name="geometry">
+      <rect>
+       <x>9</x>
+       <y>0</y>
+       <width>101</width>
+       <height>71</height>
+      </rect>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_10">
+      <item>
+       <widget class="QPushButton" name="AppendModeButton">
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="mouseTracking">
+         <bool>false</bool>
+        </property>
+        <property name="autoFillBackground">
+         <bool>false</bool>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(0, 85, 0)</string>
+        </property>
+        <property name="text">
+         <string>Append</string>
+        </property>
+        <property name="checkable">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
