--- a/samplerinfinite.ui
+++ b/samplerinfinite.ui
@@ -232,7 +232,7 @@ color: rgb(0, 0, 0)</string>
       <number>1</number>
      </property>
      <property name="value">
-      <number>0</number>
+      <number>100</number>
      </property>
      <property name="orientation">
       <enum>Qt::Orientation::Horizontal</enum>
@@ -263,6 +263,7 @@ color: rgb(0, 0, 0)</string>
         <property name="font">
          <font>
           <family>Viner Hand ITC</family>
+          <pointsize>11</pointsize>
           <kerning>true</kerning>
          </font>
         </property>
@@ -358,7 +359,7 @@ color: rgb(0, 0, 0)</string>
    <widget class="QWidget" name="AppendModeBase" native="true">
     <property name="geometry">
      <rect>
-      <x>1540</x>
+      <x>1530</x>
       <y>300</y>
       <width>120</width>
       <height>71</height>
@@ -437,6 +438,95 @@ color: rgb(0, 0, 0)</string>
      </layout>
     </widget>
    </widget>
+   <widget class="QWidget" name="ChunkCrossfadeBase" native="true">
+    <property name="geometry">
+     <rect>
+      <x>1540</x>
+      <y>590</y>
+      <width>120</width>
+      <height>21</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QWidget" name="verticalLayoutWidget_12">
+    <property name="geometry">
+     <rect>
+      <x>1540</x>
+      <y>590</y>
+      <width>111</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout_12">
+     <item>
+      <widget class="PowerOfTwoSpinBox" name="ChunkCrossfadeSpinBox">
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
+       <property name="layoutDirection">
+        <enum>Qt::LayoutDirection::LeftToRight</enum>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(0, 170, 0);
+caret-color: transparent</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignmentFlag::AlignCenter</set>
+       </property>
+       <property name="minimum">
+        <number>1</number>
+       </property>
+       <property name="maximum">
+        <number>16384</number>
+       </property>
+       <property name="stepType">
+        <enum>QAbstractSpinBox::StepType::DefaultStepType</enum>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="ChunkCrossfadeLabelBase" native="true">
+    <property name="geometry">
+     <rect>
+      <x>1520</x>
+      <y>540</y>
+      <width>151</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <widget class="QWidget" name="verticalLayoutWidget_13">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>141</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_13">
+      <item>
+       <widget class="QLabel" name="ChunkCrossfadeLabel">
+        <property name="font">
+         <font>
+          <family>Viner Hand ITC</family>
+          <pointsize>11</pointsize>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">color: rgb(0, 170, 0)</string>
+        </property>
+        <property name="text">
+         <string>Chunk Crossfade</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignmentFlag::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -462,6 +552,11 @@ color: rgb(0, 0, 0)</string>
    <extends>QWidget</extends>
    <header location="global">searchablecombobox.h</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>PowerOfTwoSpinBox</class>
+   <extends>QSpinBox</extends>
+   <header>poweroftwospinbox.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
